--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   "dependencies": {
     "apollo-server-express": "^2.9.12",
     "bcrypt": "^3.0.7",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
-    "mongoose": "^5.7.12"
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.7.12",
+    "validator": "^12.1.0"
   }
 }
